Add stylelint-suitcss plugin
This adds back the three deprecated `:root` rules

* `suitcss/custom-property-no-outside-root`
* `suitcss/root-no-standard-properties`
* `suitcss/selector-root-no-composition`

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     ]
   },
   "dependencies": {
-    "stylelint-order": "^0.2.2"
+    "stylelint-order": "^0.2.2",
+    "stylelint-suitcss": "^1.0.0"
   }
 }
