--- a/package.json
+++ b/package.json
@@ -20,14 +20,14 @@
     "index.js"
   ],
   "devDependencies": {
-    "ava": "^0.18.2",
-    "eslint": "^3.17.0",
-    "eslint-config-stylelint": "^6.0.0",
-    "npmpub": "^3.0.1",
-    "stylelint": "^13.6.1"
+    "@ava/babel": "^2.0.0",
+    "ava": "^3.15.0",
+    "eslint": "^7.32.0",
+    "eslint-config-stylelint": "^13.1.1",
+    "npmpub": "^5.0.0"
   },
   "peerDependencies": {
-    "stylelint": "^13.6.1"
+    "stylelint": "^13.13.1"
   },
   "scripts": {
     "ava": "ava --verbose \"__tests__/**/*.js\"",
@@ -36,13 +36,8 @@
     "release": "npmpub",
     "test": "yarn run ava"
   },
-  "eslintConfig": {
-    "extends": [
-      "stylelint"
-    ],
-    "parserOptions": {
-      "sourceType": "module"
-    }
+  "ava": {
+    "babel": true
   },
   "dependencies": {
     "stylelint-order": "^4.1.0",
