--- a/package.json
+++ b/package.json
@@ -41,6 +41,6 @@
     "stylelint": "^15.6.0"
   },
   "peerDependencies": {
-    "stylelint": "^14.2.0"
+    "stylelint": "^14.2.0 || ^15.0.0"
   }
 }
