--- a/package.json
+++ b/package.json
@@ -24,23 +24,23 @@
   },
   "scripts": {
     "lint": "eslint . --ignore-path .gitignore",
-    "pretest": "yarn run lint",
+    "pretest": "yarn lint",
     "test": "jest"
   },
   "dependencies": {
     "stylelint-order": "^6.0.3",
     "stylelint-suitcss": "^5.0.0"
   },
-  "devDependencies": {
-    "@babel/core": "^7.21.4",
-    "@babel/preset-env": "^7.21.4",
-    "babel-jest": "^29.5.0",
-    "eslint": "^8.39.0",
-    "eslint-config-stylelint": "^18.0.0",
-    "jest": "^29.5.0",
-    "stylelint": "^15.6.0"
-  },
   "peerDependencies": {
-    "stylelint": "^14.2.0"
+    "stylelint": "^15.0.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.22.9",
+    "@babel/preset-env": "^7.22.9",
+    "babel-jest": "^29.6.1",
+    "eslint": "^8.45.0",
+    "eslint-config-stylelint": "^19.0.0",
+    "jest": "^29.6.1",
+    "stylelint": "^15.10.2"
   }
 }
