--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/suitcss/stylelint-config-suitcss.git"
+    "url": "git+https://github.com/suitcss/stylelint-config-suitcss.git"
   },
   "homepage": "https://github.com/suitcss/stylelint-config-suitcss",
   "bugs": "https://github.com/suitcss/stylelint-config-suitcss/issues",
