--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "stylelint-config-suitcss",
   "version": "20.0.0",
   "description": "SUIT CSS config for Stylelint",
+  "type": "module",
   "keywords": [
     "stylelint",
     "stylelint-config",
@@ -15,12 +16,12 @@
   },
   "homepage": "https://github.com/suitcss/stylelint-config-suitcss",
   "bugs": "https://github.com/suitcss/stylelint-config-suitcss/issues",
-  "main": "index.js",
+  "exports": "./index.js",
   "files": [
     "index.js"
   ],
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=18.12.0"
   },
   "jest": {
     "verbose": true
@@ -28,17 +29,13 @@
   "scripts": {
     "lint": "eslint . --ignore-path .gitignore",
     "pretest": "yarn lint",
-    "test": "jest"
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
   "eslintConfig": {
     "extends": [
       "stylelint",
       "stylelint/jest"
-    ],
-    "globals": {
-      "module": true,
-      "require": true
-    }
+    ]
   },
   "dependencies": {
     "stylelint-order": "^6.0.4",
@@ -48,9 +45,6 @@
     "stylelint": "^16.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.9",
-    "@babel/preset-env": "^7.23.9",
-    "babel-jest": "^29.7.0",
     "eslint": "^8.56.0",
     "eslint-config-stylelint": "^21.0.0",
     "eslint-plugin-jest": "^27.6.3",
